# ml_service

./: .env  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
data/: faiss.index  faiss_chunks.json
data/funnels/10/: manifest.json
scripts/: build_faiss_index.py  run_agent_generate.py  run_agent_graph.py  run_agent_graph_live.py  run_agent_node.py  run_pipeline.py  run_safety_in_node.py
src/ai_domain/: main.py  secrets.py  settings.py
src/ai_domain/agent/: __init__.py  graph.py  models.py  nodes.py  safety_prompt.py
src/ai_domain/api/: __init__.py  adapters.py  config.py  deps.py  errors.py  exception_handlers.py  middleware.py  routes.py  schemas.py
src/ai_domain/fakes/: fake_graph.py  fake_idempotency.py  fake_policy_resolver.py  fake_telemetry.py  fake_version_resolver.py  fakes_new.py
src/ai_domain/graphs/: analysis_node.py  chat_flow.py  email_flow.py  main_graph.py  state.py  voice_flow.py
src/ai_domain/llm/: base.py  client.py  (+14 more)
tests/: conftest.py  deps.py
tests/integration/: test_e2e_graph_channels.py  test_orchestrator_llm_router.py
tests/live/: test_openai_smoke.py
tests/unit/: test_agent_graph.py  test_agent_memory_trimming.py  test_agent_node_llm.py  test_agent_nodes_prompt.py  test_agent_safety_nodes.py  test_agent_tool_executor.py  test_langchain_adapter_router.py  test_langgraph_graph_routing.py  test_llm_client.py  test_llm_rate_limit.py  test_llm_retry.py  test_llm_router_fallback.py  test_memory_helpers.py  test_node_memory_summary.py  test_node_rag_retrieve.py  test_node_stage_analysis.py  test_nodes_memory.py  test_orchestrator_degraded.py  test_prompt_repository_cache.py  test_prompt_repository_compat.py  test_tool_limits.py  test_tools_registry.py
(+79 files in other folders)
